--- a/gk.bib
+++ b/gk.bib
@@ -24327,3 +24327,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal =      {arXiv preprint arXiv:1605.04135},
   year =         {2016}
 }
+@article{MikCheCor13,
+  title={Efficient estimation of word representations in vector space},
+  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  journal={arXiv preprint arXiv:1301.3781},
+  year={2013}
+}
