--- a/gk.bib
+++ b/gk.bib
@@ -24333,3 +24333,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal={arXiv preprint arXiv:1301.3781},
   year={2013}
 }
+@article{DenSpi16,
+  title={Assessing the Consequences of Text Preprocessing Decisions},
+  author={Denny, Matthew James and Spirling, Arthur},
+  note-{https://ssrn.com/abstract=2849145},
+  year={2016}
+}
