--- a/gk.bib
+++ b/gk.bib
@@ -24336,6 +24336,6 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @article{DenSpi16,
   title={Assessing the Consequences of Text Preprocessing Decisions},
   author={Denny, Matthew James and Spirling, Arthur},
-  note-{https://ssrn.com/abstract=2849145},
+  note={https://ssrn.com/abstract=2849145},
   year={2016}
 }
