--- a/gk.bib
+++ b/gk.bib
@@ -18960,13 +18960,16 @@ address = {Chicago, IL}
 }
 
 @article{DavShaSch01,
-  author={Adam Davey, Michael J.\ Shanahan and Joseph L.\ Schafer  },
-  title={Correcting for selective nonresponse in the national longitudinal survey of youth using multiple imputation},
-  journal={The Journal of Human Resources},
-  volume={36},
-  number={3},
-  pages={500--519},
-  year={2001}
+  author =       {Adam Davey, Michael J.\ Shanahan and Joseph L.\
+                  Schafer },
+  title =        {Correcting for selective nonresponse in the national
+                  longitudinal survey of youth using multiple
+                  imputation},
+  journal =      {The Journal of Human Resources},
+  volume =       {36},
+  number =       {3},
+  pages =        {500--519},
+  year =         {2001}
 }
 
 @article{KacRagSch08,
