--- a/gk.bib
+++ b/gk.bib
@@ -24342,3 +24342,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   note={https://ssrn.com/abstract=2849145},
   year={2016}
 }
+@article{LevGolDag15,
+  title =        {Improving distributional similarity with lessons
+                  learned from word embeddings},
+  author =       {Levy, Omer and Goldberg, Yoav and Dagan, Ido},
+  journal =      {Transactions of the Association for Computational
+                  Linguistics},
+  volume =       {3},
+  pages =        {211--225},
+  year =         {2015}
+}
