--- a/gk.bib
+++ b/gk.bib
@@ -24353,3 +24353,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {211--225},
   year =         {2015}
 }
+@article{Hoadley01,
+  title =        {[Statistical Modeling: The Two Cultures]: Comment},
+  author =       {Hoadley, Bruce},
+  journal =      {Statistical Science},
+  volume =       {16},
+  number =       {3},
+  pages =        {220--224},
+  year =         {2001}
+}
