--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -209,15 +209,19 @@
   OPTnote =      {},
   OPTannote =    {}
 }
-
-@article{BlaHonKin15b,
+@Article{BlaHonKin15b,
+  author =       {Matthew Blackwell and James Honaker and Gary King},
   title =        {A Unified Approach to Measurement Error and Missing
-                  Data: Overview and Applications},
-  author =       {Blackwell, Matthew and Honaker, James and King,
-                  Gary},
-  journal =      {Sociological Methods \& Research},
-  pages =        {1--39},
-  year =         {2015}
+                  Data: Details and Extensions},
+  journal =      {Sociological Methods and Research},
+  year =         {2015},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
 }
 
 @Article{KinSen12,
@@ -504,7 +508,7 @@ pages={1037--1060},
   year =	 {2010},
   volume =	 {54},
   number =	 {1},
-  month =	 {1},
+  month =	 {January},
   pages =	 {229--247},
   note =	 {\url{http://j.mp/jNFDgI}}
 }
@@ -2475,20 +2479,3 @@ pages={1037--1060},
   note =         {\url{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
                   [UNF:6:56ELwemliNH+ALideeeh3Q==]}
 }
-@Online{HopKinKno13,
-  author =       {Daniel Hopkins and Gary King and Matthew Knowles and
-                  Steven Melendez},
-  title =        {Readme: Software for Automated Content Analysis},
-  date =         {2013},
-  url =          {GaryKing.org/readme},
-  note =         {Versions 2007--2013}
-}
-
-@Patent{KinHopLu12,
-  author =       {King, Gary and Hopkins, Daniel and Lu, Ying},
-  title =        {System for estimating a distribution of message
-                  content categories in source data},
-  number =       {US Patent 8,180,717},
-  year =         2012
-}
-
