--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -508,7 +508,7 @@ pages={1037--1060},
   year =	 {2010},
   volume =	 {54},
   number =	 {1},
-  month =	 {January},
+  month =	 {1},
   pages =	 {229--247},
   note =	 {\url{http://j.mp/jNFDgI}}
 }
@@ -2478,4 +2478,20 @@ pages={1037--1060},
   year =         2016,
   note =         {\url{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
                   [UNF:6:56ELwemliNH+ALideeeh3Q==]}
+}
+@Online{HopKinKno13,
+  author =       {Daniel Hopkins and Gary King and Matthew Knowles and
+                  Steven Melendez},
+  title =        {Readme: Software for Automated Content Analysis},
+  date =         {2013},
+  url =          {GaryKing.org/readme},
+  note =         {Versions 2007--2013}
+}
+
+@Patent{KinHopLu12,
+  author =       {King, Gary and Hopkins, Daniel and Lu, Ying},
+  title =        {System for estimating a distribution of message
+                  content categories in source data},
+  number =       {US Patent 8,180,717},
+  year =         2012
 }
