--- a/gk.bib
+++ b/gk.bib
@@ -24362,3 +24362,16 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {220--224},
   year =         {2001}
 }
+@book{TarNikBas14,
+  title={Sequential analysis: Hypothesis testing and changepoint detection},
+  author={Tartakovsky, Alexander and Nikiforov, Igor and Basseville, Mich{\`e}le},
+  year={2014},
+  publisher={CRC Press}
+}
+@book{MalMukSen11,
+  title={Sequential estimation},
+  author={Ghosh, Malay and Mukhopadhyay, Nitis and Sen, Pranab Kumar},
+  volume={904},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
