--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -57,6 +57,14 @@
   note =	 {{http://j.mp/ecinfbook}}
 }
 
+@book{King98,
+  title =        {Unifying political methodology: The Likelihood
+                  Theory of Statistical Inference},
+  author =       {King, Gary},
+  year =         {1998},
+  publisher =    {University of Michigan Press}
+}
+
 @book{KinKeoVer94,
   author =	 {Gary King and Robert O. Keohane and Sidney Verba},
   title =	 {Designing Social Inquiry: Scientific Inference in
@@ -2402,7 +2410,7 @@ pages={1037--1060},
   note =	 {{http://gking.harvard.edu/amelia}}
 }
 
-@article{King98,
+@article{King98b,
   author =	 {Gary King},
   title =	 {MAXLIK, a set of Gauss programs, annotated for
                   pedagogical purposes, to implement the maximum
