--- a/gk.bib
+++ b/gk.bib
@@ -24375,3 +24375,23 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2011},
   publisher={John Wiley \& Sons}
 }
+@article{AchBlaSen16,
+  title =        {Explaining Causal Findings Without Bias: Detecting
+                  and Assessing Direct Effects},
+  author =       {Acharya, Avidit and Blackwell, Matthew and Sen,
+                  Maya},
+  journal =      {American Political Science Review},
+  month =        {August},
+  pages =        {1--18},
+  year =         {2016}
+}
+@article{imai2011unpacking,
+  title={Unpacking the black box of causality: Learning about causal mechanisms from experimental and observational studies},
+  author={Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
+  journal={American Political Science Review},
+  volume={105},
+  number={4},
+  pages={765--789},
+  year={2011},
+  publisher={Cambridge Univ Press}
+}
