--- a/gk.bib
+++ b/gk.bib
@@ -24385,7 +24385,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {1--18},
   year =         {2016}
 }
-@article{imai2011unpacking,
+@article{ImaKeeTin11,
   title={Unpacking the black box of causality: Learning about causal mechanisms from experimental and observational studies},
   author={Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
   journal={American Political Science Review},
