--- a/gk.bib
+++ b/gk.bib
@@ -24381,7 +24381,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Acharya, Avidit and Blackwell, Matthew and Sen,
                   Maya},
   journal =      {American Political Science Review},
-  month =        {August},
+  month =        8,
   pages =        {1--18},
   year =         {2016}
 }
