--- a/gk.bib
+++ b/gk.bib
@@ -23065,7 +23065,7 @@ author = {{National Center for Education Statistics}},
 @article{Lin13,
   title =        {Agnostic notes on regression adjustments to
                   experimental data: Reexamining Freedman’s critique},
-  author =       {Lin, Winston and others},
+  author =       {Lin, Winston},
   journal =      {The Annals of Applied Statistics},
   volume =       {7},
   number =       {1},
@@ -24384,5 +24384,16 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   month =        8,
   pages =        {1--18},
   year =         {2016}
+}
+
+@article{Lindsey97,
+  title={Stopping rules and the likelihood function},
+  author={Lindsey, JK},
+  journal={Journal of statistical planning and inference},
+  volume={59},
+  number={1},
+  pages={167--177},
+  year={1997},
+  publisher={Elsevier}
 }
 
