--- a/gk.bib
+++ b/gk.bib
@@ -24397,3 +24397,19 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher={Elsevier}
 }
 
+@article{Coss09,
+  title =        {Pseudoreplication conventions are testable
+                  hypotheses},
+  author =       {Coss, Richard G},
+  journal =      {Journal of Comparative Psychology},
+  volume =       {123},
+  number =       {4},
+  pages =        {444--446},
+  year =         {2009},
+}
+@Book{Hansen17,
+  author =    {Bruce E. Hansen},
+  title =        {Econometrics},
+  publisher =    {University of Wisconsin},
+  year =         2017}
+
