--- a/gk.bib
+++ b/gk.bib
@@ -24413,3 +24413,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {University of Wisconsin},
   year =         2017}
 
+@article{hurlbert1984pseudoreplication,
+  title =        {Pseudoreplication and the design of ecological field
+                  experiments},
+  author =       {Hurlbert, Stuart H},
+  journal =      {Ecological monographs},
+  volume =       {54},
+  number =       {2},
+  pages =        {187--211},
+  year =         {1984}
+}
