--- a/gk.bib
+++ b/gk.bib
@@ -24413,7 +24413,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {University of Wisconsin},
   year =         2017}
 
-@article{hurlbert1984pseudoreplication,
+@article{Hurlbert84,
   title =        {Pseudoreplication and the design of ecological field
                   experiments},
   author =       {Hurlbert, Stuart H},
