--- a/gk.bib
+++ b/gk.bib
@@ -24423,3 +24423,32 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {187--211},
   year =         {1984}
 }
+@article{Klapper60,
+  title =        {The effects of mass communication.},
+  author =       {Klapper, Joseph T},
+  year =         {1960},
+  publisher =    {Free Press}
+}
+@article{TalFis08
+  title =        {Legitimating Racial Discrimination: Emotions, Not
+                  Beliefs, Best Predict Discrimination in a
+                  Meta-Analysis},
+  author =       {Talaska, Cara A and Fiske, Susan T and Chaiken,
+                  Shelly},
+  journal =      {Social Justice Research},
+  volume =       {21},
+  number =       {3},
+  pages =        {263--296},
+  year =         {2008},
+  publisher =    {Springer}
+}             
+  
+@article{CikBotFis11,
+  title =        {Us Versus Them: Social Identity Shapes Neural
+                  Responses to Intergroup Competition and Harm},
+  author =       {Cikara, Mina and Botvinick, Matthew M and Fiske,
+                  Susan T},
+  journal =      {Psychological Science},
+  year =         {2011},
+  publisher =    {Sage Publications}
+}             
