--- a/gk.bib
+++ b/gk.bib
@@ -24452,3 +24452,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2011},
   publisher =    {Sage Publications}
 }             
+@article{McCSha72,
+  title={The agenda-setting function of mass media},
+  author={McCombs, Maxwell E and Shaw, Donald L},
+  journal={Public opinion quarterly},
+  volume={36},
+  number={2},
+  pages={176--187},
+  year={1972}
+}
