--- a/gk.bib
+++ b/gk.bib
@@ -24452,3 +24452,95 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2011},
   publisher =    {Sage Publications}
 }             
+@article{McCSha72,
+  title={The agenda-setting function of mass media},
+  author={McCombs, Maxwell E and Shaw, Donald L},
+  journal={Public opinion quarterly},
+  volume={36},
+  number={2},
+  pages={176--187},
+  year={1972}
+}
+@book{IyeKin10,
+  title={News that matters: Television and American opinion},
+  author={Iyengar, Shanto and Kinder, Donald R},
+  year={2010},
+  publisher={University of Chicago Press}
+}
+@article{Vavreck07,
+  title =        {The exaggerated effects of advertising on turnout:
+                  The dangers of self-reports},
+  author =       {Vavreck, Lynn and others},
+  journal =      {Quarterly Journal of Political Science},
+  volume =       {2},
+  number =       {4},
+  pages =        {325--343},
+  year =         {2007}
+}
+@article{Prior09,
+  title =        {Improving media effects research through better
+                  measurement of news exposure},
+  author =       {Prior, Markus},
+  journal =      {The Journal of Politics},
+  volume =       {71},
+  number =       {3},
+  pages =        {893--908},
+  year =         {2009},
+  publisher =    {Cambridge University Press}
+}
+@article{VavIye11,
+  title={The future of political communication research},
+  author={Vavreck, Lynn and Iyengar, Shanto},
+  journal={The Oxford handbook of American public opinion and the media},
+  pages={156--168},
+  year={2011},
+  publisher={Oxford University Press Oxford}
+}
+@article{Nelson11,
+  title={Issue Framing},
+  author={Thomas E.\ Nelson},
+  journal={The Oxford handbook of American public opinion and the media},
+  pages={156--168},
+  year={2011},
+  publisher={Oxford University Press Oxford}
+}
+@article{Gunnell11,
+  title={Democracy and the concept of public opinion},
+  author={John G.\ Gunnell},
+  journal={The Oxford handbook of American public opinion and the media},
+  pages={1--18},
+  year={2011},
+  publisher={Oxford University Press Oxford}
+}
+@article{Fiskin13,
+  title =        {Deliberation by the people themselves: Entry points
+                  for the public voice},
+  author =       {Fishkin, James},
+  journal =      {Election Law Journal},
+  volume =       {12},
+  number =       {4},
+  pages =        {490--507},
+  year =         {2013},
+  publisher =    {Mary Ann Liebert, Inc.}
+}
+@article{Sanders97,
+  title={Against deliberation},
+  author={Sanders, Lynn M},
+  journal={Political theory},
+  volume={25},
+  number={3},
+  pages={347--376},
+  year={1997},
+  publisher={Sage Publications Thousand Oaks}
+}
+@article{PanGre08,
+  title =        {Field experiments testing the impact of radio
+                  advertisements on electoral competition},
+  author =       {Panagopoulos, Costas and Green, Donald P},
+  journal =      {American Journal of Political Science},
+  volume =       {52},
+  number =       {1},
+  pages =        {156--168},
+  year =         {2008},
+  publisher =    {Wiley Online Library}
+}
