--- a/gk.bib
+++ b/gk.bib
@@ -24429,7 +24429,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1960},
   publisher =    {Free Press}
 }
-@article{TalFis08
+@article{TalFis08,
   title =        {Legitimating Racial Discrimination: Emotions, Not
                   Beliefs, Best Predict Discrimination in a
                   Meta-Analysis},
@@ -24439,8 +24439,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   volume =       {21},
   number =       {3},
   pages =        {263--296},
-  year =         {2008},
-  publisher =    {Springer}
+  year =         {2008}
 }             
   
 @article{CikBotFis11,
