--- a/gk.bib
+++ b/gk.bib
@@ -24542,3 +24542,193 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {263--296},
   year =         {2008}
 }             
+@article{BauGro13,
+  title =        {New media and the polarization of American political
+                  discourse},
+  author =       {Baum, Matthew A and Groeling, Tim},
+  journal =      {Political Communication},
+  volume =       {25},
+  number =       {4},
+  pages =        {345--365},
+  year =         {2008},
+  publisher =    {Taylor \& Francis}
+}
+@article{BenIye08,
+  title =        {A new era of minimal effects? The changing
+                  foundations of political communication},
+  author =       {Bennett, W Lance and Iyengar, Shanto},
+  journal =      {Journal of Communication},
+  volume =       {58},
+  number =       {4},
+  pages =        {707--731},
+  year =         {2008},
+  publisher =    {Wiley Online Library}
+}
+@article{CarMoo13,
+  title =        {When canvassers became activists: Antislavery
+                  petitioning and the political mobilization of
+                  American Women},
+  author =       {Carpenter, Daniel and Moore, Colin D},
+  journal =      {American Political Science Review},
+  volume =       {108},
+  number =       {03},
+  pages =        {479--498},
+  year =         {2014},
+  publisher =    {Cambridge Univ Press}
+}
+@Unpublished{BhaNel16,
+  author =       {Rikhil R. Bhavnani and Gareth Nellis},
+  title =        {Can Government-Controlled Media Cause Social Change? Television and Fertility in India},
+  note =         {University of Wisconsin},
+  OPTkey =       {},
+  OPTmonth =     {},
+  OPTyear =      {2016},
+  OPTannote =    {}
+}
+@techreport{DelLaF15,
+  title =        {Economic and social impacts of the media},
+  author =       {DellaVigna, Stefano and Ferrara, Eliana La},
+  year =         {2015},
+  institution =  {National Bureau of Economic Research}
+}
+
+@article{DelKap07,
+  title =        {The Fox News effect: Media bias and voting},
+  author =       {DellaVigna, Stefano and Kaplan, Ethan},
+  journal =      {The Quarterly Journal of Economics},
+  volume =       {122},
+  number =       {3},
+  pages =        {1187--1234},
+  year =         {2007},
+  publisher =    {Oxford University Press}
+}
+
+@article{GenShaSin11,
+  title =        {The effect of newspaper entry and exit on electoral
+                  politics},
+  author =       {Gentzkow, Matthew and Shapiro, Jesse M and
+                  Sinkinson, Michael},
+  journal =      {The American Economic Review},
+  volume =       {101},
+  number =       {7},
+  pages =        {2980--3018},
+  year =         {2011},
+  publisher =    {American Economic Association}
+}
+@article{Gentzkow06,
+  title =        {Television and voter turnout},
+  author =       {Gentzkow, Matthew},
+  journal =      {The Quarterly Journal of Economics},
+  volume =       {121},
+  number =       {3},
+  pages =        {931--972},
+  year =         {2006},
+  publisher =    {Oxford University Press}
+}
+@article{HubArc07,
+  title =        {Identifying the persuasive effects of presidential
+                  advertising},
+  author =       {Huber, Gregory A and Arceneaux, Kevin},
+  journal =      {American Journal of Political Science},
+  volume =       {51},
+  number =       {4},
+  pages =        {957--977},
+  year =         {2007},
+  publisher =    {Wiley Online Library}
+}
+@article{ReeMcKStu16,
+  title =        {'It's The Sun Wot Won It': Evidence of media
+                  influence on political attitudes and voting from a
+                  UK quasi-natural experiment},
+  author =       {Reeves, Aaron and McKee, Martin and Stuckler, David},
+  journal =      {Social science research},
+  volume =       {56},
+  pages =        {44--57},
+  year =         {2016},
+  publisher =    {Elsevier}
+}
+@article{SmiSea14,
+  title =        {Who let the (attack) dogs out? New evidence for
+                  partisan media effects},
+  author =       {Smith, Glen and Searles, Kathleen},
+  journal =      {Public Opinion Quarterly},
+  pages =        {nft082},
+  year =         {2014},
+  publisher =    {AAPOR}
+}
+@article{ConMoe15,
+  title={Moderation from bias: A field experiment on partisan media in a new democracy},
+  author={Conroy-Krutz, Jeffrey and Moehler, Devra C},
+  journal={The Journal of Politics},
+  volume={77},
+  number={2},
+  pages={575--587},
+  year={2015},
+  publisher={University of Chicago Press Chicago, IL}
+}
+@article{GreCalAro14,
+  title =        {Field experimental designs for the study of media
+                  effects},
+  author =       {Green, Donald P and Calfano, Brian R and Aronow,
+                  Peter M},
+  journal =      {Political Communication},
+  volume =       {31},
+  number =       {1},
+  pages =        {168--180},
+  year =         {2014},
+  publisher =    {Taylor \& Francis}
+}
+@article{GreVav07,
+  title =        {Analysis of cluster-randomized experiments: A
+                  comparison of alternative estimation approaches},
+  author =       {Green, Donald P and Vavreck, Lynn},
+  journal =      {Political Analysis},
+  pages =        {138--152},
+  year =         {2008},
+  publisher =    {JSTOR}
+}
+@article{Levendusky13,
+  title =        {Why do partisan media polarize viewers?},
+  author =       {Levendusky, Matthew S},
+  journal =      {American Journal of Political Science},
+  volume =       {57},
+  number =       {3},
+  pages =        {611--623},
+  year =         {2013},
+  publisher =    {Wiley Online Library}
+}
+@article{PalLagGre15,
+  title =        {Does product placement change television viewers’
+                  social behavior?},
+  author =       {Paluck, Elizabeth Levy and Lagunes, Paul and Green,
+                  Donald P and Vavreck, Lynn and Peer, Limor and
+                  Gomila, Robin},
+  journal =      {PloS one},
+  volume =       {10},
+  number =       {9},
+  pages =        {e0138610},
+  year =         {2015},
+  publisher =    {Public Library of Science}
+}
+@article{RyaBra13,
+  title =        {Gaffe Appeal A Field Experiment on Partisan
+                  Selective Exposure to Election Messages},
+  author =       {Ryan, Timothy J and Brader, Ted},
+  journal =      {Political Science Research and Methods},
+  pages =        {1--21},
+  year =         {2015},
+  publisher =    {Cambridge Univ Press}
+}
+
+@article{TruPal12,
+  title =        {The devil knows best: Experimental effects of a
+                  televised soap opera on Latino attitudes toward
+                  government and support for the 2010 US Census},
+  author =       {Trujillo, Matthew D and Paluck, Elizabeth Levy},
+  journal =      {Analyses of Social Issues and Public Policy},
+  volume =       {12},
+  number =       {1},
+  pages =        {113--132},
+  year =         {2012},
+  publisher =    {Wiley Online Library}
+}
