--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -34,7 +34,7 @@
   publisher =	 {Princeton University Press},
   year =	 {2008},
   address =	 {Princeton},
-  note =	 {{http://gking.harvard.edu/files/smooth/}}
+  url =	 {http://gking.harvard.edu/files/smooth/}
 }
 
 @book{KinRosTan04,
