--- a/gk.bib
+++ b/gk.bib
@@ -24423,8 +24423,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {187--211},
   year =         {1984}
 }
-@article{Klapper60,
-  title =        {The effects of mass communication.},
+@book{Klapper60,
+  title =        {The effects of mass communication},
   author =       {Klapper, Joseph T},
   year =         {1960},
   publisher =    {Free Press}
