--- a/gk.bib
+++ b/gk.bib
@@ -24423,7 +24423,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {187--211},
   year =         {1984}
 }
-@book{Klapper60,
+{Klapper60,
   title =        {The effects of mass communication},
   author =       {Klapper, Joseph T},
   year =         {1960},
@@ -24578,13 +24578,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 @Unpublished{BhaNel16,
   author =       {Rikhil R. Bhavnani and Gareth Nellis},
-  title =        {Can Government-Controlled Media Cause Social Change? Television and Fertility in India},
+  title =        {Can Government-Controlled Media Cause Social Change?
+                  Television and Fertility in India},
   note =         {University of Wisconsin},
-  OPTkey =       {},
-  OPTmonth =     {},
-  OPTyear =      {2016},
-  OPTannote =    {}
-}
+  year =      2016}
+  
 @techreport{DelLaF15,
   title =        {Economic and social impacts of the media},
   author =       {DellaVigna, Stefano and Ferrara, Eliana La},
