--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -345,7 +345,7 @@ pages={1037--1060},
   journal =	 {Public Opinion Quarterly},
   year =	 {2010},
   pages =	 {1--22},
-  note =         {{http://gking.harvard.edu/files/abs/implement-abs.shtml}}
+  url =         {http://j.mp/jVFIVg}
 }
 
 @Article{KinLuShi10,
