--- a/gk.bib
+++ b/gk.bib
@@ -24729,3 +24729,15 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2012},
   publisher =    {Wiley Online Library}
 }
+@article{Bail16,
+  title =        {Combining natural language processing and network
+                  analysis to examine how advocacy organizations
+                  stimulate conversation on social media},
+  author =       {Bail, Christopher Andrew},
+  journal =      {Proceedings of the National Academy of Sciences},
+  volume =       {113},
+  number =       {42},
+  pages =        {11823--11828},
+  year =         {2016},
+  publisher =    {National Acad Sciences}
+}
