--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1204,7 +1204,7 @@ pages={1037--1060},
   volume =	 95,
   year =	 2001,
   pages =	 {49--69},
-  month =	 {March},
+  month =	 {3},
   number =	 1 ,
   note =	 {{http://gking.harvard.edu/files/abs/evil-abs.shtml}}
 }
@@ -2509,6 +2509,6 @@ pages={1037--1060},
   author =       {Firat, Aykut and Brooks, Mitchell and Bingham,
                   Christopher and Herdagdelen, Amac and King, Gary},
   year =         {2016},
-  month =        nov # "~1",
+  month =        11,
   note =         {US Patent 9,483,544}
 }
