--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2503,12 +2503,12 @@ pages={1037--1060},
   number =       {US Patent 8,180,717},
   year =         2012
 }
-@misc{FirBroBin16,
+@Patent{FirBroBin16,
   title =        {Systems and methods for calculating category
                   proportions},
   author =       {Firat, Aykut and Brooks, Mitchell and Bingham,
                   Christopher and Herdagdelen, Amac and King, Gary},
   year =         {2016},
   month =        11,
-  note =         {US Patent 9,483,544}
+  number =         {US Patent 9,483,544}
 }
