--- a/gk.bib
+++ b/gk.bib
@@ -5699,7 +5699,7 @@ howpublished = {NBER}
 	pages={70-76}
 }
 
-@article{holland86,
+@article{Holland86,
 	author={Paul W. Holland},
 	title={Statistics and Causal Inference},
 	journal={Journal of the American Statistical Association},
@@ -5972,7 +5972,7 @@ howpublished = {NBER}
 	volume= 99,
 	year= 2004,
 	pages={854--866},
-	month={September},
+	month=9,
 	number= 467
 }
 
@@ -19212,7 +19212,7 @@ address = {Chicago, IL}
   volume =	 29,
   number =	 19,
   pages =	 {1991-1995},
-  month =	 {August}
+  month =	 8
 }
 
 @Article{TunBenMcC10,
@@ -23064,7 +23064,7 @@ author = {{National Center for Education Statistics}},
 }
 @article{Lin13,
   title =        {Agnostic notes on regression adjustments to
-                  experimental data: Reexamining Freedman’s critique},
+                  experimental data: Reexamining Freedman's critique},
   author =       {Lin, Winston},
   journal =      {The Annals of Applied Statistics},
   volume =       {7},
