--- a/gk.bib
+++ b/gk.bib
@@ -22825,7 +22825,7 @@ author = {{National Center for Education Statistics}},
   journal =	 {Pension Section News},
   year =	 2004,
   volume =	 54,
-  month =	 {March},
+  month =	 3,
   note =	 {(Letter to the Editor), j.mp/Langer04q}
 }
 
